Fix #28 - Navigation bar is not centred

--- a/public/css/index.css
+++ b/public/css/index.css
@@ -1,14 +1,9 @@
 #mainHeader {
-	display: flex;
-	justify-content: center;
+	margin: 17.5% 0% 0% 0%;
 	text-align: center;
-	margin: 20% 0% 0% 0%;
 }
 
 #subtext {
-	display: flex;
-	justify-content: center;
 	text-align: center;
-	margin: -1% 0% 10% 0%;
 	font-weight: normal;
 }
