--- a/public/css/main.css
+++ b/public/css/main.css
@@ -9,45 +9,12 @@ body {
 
 button {
 	font: inherit;
-}
-
-a, a:visited {
-	text-decoration: none;
 	color: inherit;
 }
 
-#header {
-	background: #161616;
-	display: flex;
-	justify-content: space-around;
-}
-
-#navLinks {
-	padding: 0;
-}
-
-#navLinks li {
-	display: inline-block;
-	padding: 0px 15px;
-}
-
-#navLinks li a {
-	transition: all 0.3s ease 0s;
-}
-
-#navLinks li a:hover {
-	color: #9b9b9b;
-}
-
-#loginButton {
-	display: flex;
-	align-items: center;
-	cursor: pointer;
-	transition: all 0.3s ease 0s;
-}
-
-#userAvatar {
-	padding: 0% 15% 0% 0%;
+a, a:visited {
+	color: inherit;
+	text-decoration: none;
 }
 
 #subHeader {
@@ -58,12 +25,49 @@ a, a:visited {
 
 #subHeader p {
 	margin: 0;
-	padding: 0;
+}
+
+#header {
+	display: flex;
+	justify-content: space-between;
+	padding: 1.5% 10% 1.5% 10%;
+}
+
+#navigation {
+	display: flex;
+	align-items: center;
+}
+
+#navLinks {
+	display: flex;
+	margin: 0 20px 0 0;
+}
+
+#navLinks a {
+	padding: 0 15px 0 15px;
+}
+
+#loginButton {
+	padding: 10px 15px 10px 15px;
+	cursor: pointer;
+	border: none;
+	background: #23282d;
+}
+
+#userData {
+	display: flex;
+	align-items: center;
+	padding: 5px 15px 5px 15px;
+	background: #23282d;
+}
+
+#userAvatar {
+	padding: 0 15px 0 0;
 }
 
 footer {
 	margin: auto 0 0 0;
 	text-align: center;
-	font: normal normal bold 75% 'Open Sans', sans-serif;
-	color: #f0f0f0cc;
+	font-size: 75%;
+	opacity: 75%;
 }
